Fix iframe resizing not centered

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,6 @@ h2 {
 
 iframe {
     width: 100%;
-    height: 100%;
 }
 
 .footerlink {
